delete bench & integration tests (moved to tsubakuro-examples)